# py-rest

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  users.py
app/core/: config.py
app/core/db/: __init__.py  db_helper.py
app/core/db/migrations/: env.py  script.py.mako
app/core/db/migrations/versions/: 1718531363_c49adce37b78_create_users_table.py
app/core/db/models/: __init__.py  base.py  user.py
app/core/schemas/: user.py
app/crud/: users.py
