[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-soap"
version = "0.0.1"
dependencies = []

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "mypy",
    "flake8",
    "flake8-pyproject",
    "flake8-builtins",
    "pep8-naming",
    "flake8-bugbear",
    "bandit",
    "pre-commit",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.mypy]
strict = true

[tool.flake8]
max-line-length = 88
max-complexity = 8
ignore = []

[tool.bandit]
skips = []
