[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = { extras = ["email"], version = "^2.7.4" }
pydantic-settings = "^2.3.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.10.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
flake8-builtins = "^2.5.0"
pep8-naming = "^0.14.1"
flake8-bugbear = "^24.4.26"
bandit = "^1.7.9"
pre-commit = "^3.7.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.mypy]
strict = true

[tool.flake8]
max-line-length = 88
max-complexity = 8
ignore = []

[tool.bandit]
skips = []
