[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = { extras = ["email"], version = "^2.7.4" }
pydantic-settings = "^2.3.3"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.9"
pre-commit = "^3.7.1"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "S", "B", "A"]

[tool.ruff.lint.mccabe]
max-complexity = 5
